# visu

./: CMakeLists.txt  Makefile  author  init_sdl.c  lem_in  main.c  run.sh  visu.h
ModuleCache/: Session.modulevalidation
ModuleCache.noindex/: Session.modulevalidation
ModuleCache.noindex/2NIACHXIVWONL/: _Builtin_stddef_max_align_t-2O6NRUMKJL0AJ.pcm  modules.idx
ModuleCache.noindex/2TOEKWEIMGX9Y/: _Builtin_stddef_max_align_t-2O6NRUMKJL0AJ.pcm  modules.idx
ModuleCache.noindex/3GMJOJCDTGAPC/: _Builtin_stddef_max_align_t-2O6NRUMKJL0AJ.pcm  modules.idx
ModuleCache/3W54ZPJZL1U36/: Darwin-1IVCWVLR6MT9T.pcm  _Builtin_stddef_max_align_t-14H22GRGLA1OM.pcm  modules.idx
ModuleCache/XWB1PPOVLMTP/: _Builtin_stddef_max_align_t-14H22GRGLA1OM.pcm  modules.idx
fdfTest/fdfTest/: Makefile  author  draw.c  error.c  events.c  fdf.h  get_next_line.c  get_next_line.h  hello_norm.c  init.c  main.c  projection.c  read_map.c  rotation.c  tmpfunc.c  validation.c  vectors.c
fdfTest/fdfTest.xcodeproj/: project.pbxproj
fdfTest/fdfTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
fdfTest/fdfTest/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_getcurlist.c  ft_getmidnum.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcap.c  ft_strcat.c  ft_strchr.c  (+29 more)
includes/: lem_in.h
libft/: CMakeLists.txt
libft/libft/: Makefile  ccprint.c  check.c  color.c  cprint.c  fprint.c  free_p.c  ft_bigpart.c  ft_count.c  ft_itoa.c  ft_littlesmall.c  ft_lstdel.c  ft_mult.c  ft_power.c  ft_print_bits.c  ft_print_membit.c  ft_print_memory.c  ft_printf.c  ft_printf.h  ft_putchar.c  ft_putchar_fd.c  ft_putdbl.c  ft_putldbl.c  ft_strike.c  ft_strrev.c  ft_strsplit.c  ft_sumstr.c  ft_whitespaces.c  ft_wordcount.c  ft_wordsize.c  get_next_line.c  int_plus1.c  int_plus2.c  integers.c  libft.h  notation.c  oprint.c  piskaprint.c  pprint.c  string.c  (+3 more)
run/: debug.txt  lem_in  visu
source/: al_ways.c  algo.c  ants.c  connect.c  cp_ways.c  data.c  errors.c  free.c  free2.c  get_way.c  go_ants.c  init_sdl.c  main.c  main_info_block.c  read.c  rooms.c  strt.c  text.c  visu.h
visualizer-egxrazyvezqdyjdmwbkqwwsjnqnm/: info.plist
visualizer-egxrazyvezqdyjdmwbkqwwsjnqnm/TextIndex/: TextFragmentIndex-v7.idx
visualizer-eoagkmirzmhaqqblffsjjajwdziw/: info.plist
visualizer-eoagkmirzmhaqqblffsjjajwdziw/TextIndex/: TextFragmentIndex-v7.idx
visualizer-hgldrdodieffbehjdskgefklekre/: info.plist
visualizer-hgldrdodieffbehjdskgefklekre/TextIndex/: TextFragmentIndex-v7.idx
visualizer/visualizer/: breh.c  initStructs.c  keyscode.c  keyscode.h  main.c  roomsHandler.c  visu.h
visualizer/visualizer.xcodeproj/: project.pbxproj
(+501 files in other folders)
